--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
+    "colorthief": "^2.4.0",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
