--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "axios": "^1.6.7",
     "colorthief": "^2.4.0",
     "flowbite-react": "^0.7.2",
+    "history": "^5.3.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.9.1",
+    "react-image-crop": "^11.0.5",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
